--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Chrome
         run: |
           sudo apt-get update
-          sudo apt-get install -y chromium chromium-chromedriver
+          sudo apt-get install -y chromium-browser chromium-chromedriver
 
       - name: Run Scraper
         env:
