--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -35,8 +35,13 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add ads_history.json
-          git commit -m "Update ads history" || echo "No changes to commit"
-          git push
+            git config --global user.name "GitHub Actions"
+            git config --global user.email "actions@github.com"
+            git push
+            if [ -f ads_history.json ]; then
+                git add ads_history.json
+                git commit -m "Update ads history"
+                git push
+            else
+                echo "ads_history.json not found!"
+            fi
