--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -7,10 +7,13 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    permissions:  
+        contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+        with:
+            token: ${{ secrets.GITHUB_TOKEN }} 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -37,6 +40,7 @@ jobs:
         run: |
             git config --global user.name "GitHub Actions"
             git config --global user.email "actions@github.com"
+            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
             git push
             if [ -f ads_history.json ]; then
                 git add ads_history.json
