--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-            token: ${{ secrets.GITHUB_TOKEN }} 
+            token: ${{ secrets.GHUB_TOKEN }} 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -40,7 +40,7 @@ jobs:
         run: |
             git config --global user.name "GitHub Actions"
             git config --global user.email "actions@github.com"
-            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+            git remote set-url origin https://x-access-token:${{ secrets.GHUB_TOKEN }}@github.com/${{ github.repository }}
             git push
             if [ -f ads_history.json ]; then
                 git add ads_history.json
