--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,7 +1,7 @@
 name: Divar Scraper
 on:
   schedule:
-    - cron: "5 * * * *"  
+    - cron: "*/5 * * * *"
   workflow_dispatch:  
 
 jobs:
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
             token: ${{ secrets.GHUB_TOKEN }} 
+            fetch-depth: 0 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -43,9 +44,10 @@ jobs:
             git remote set-url origin https://x-access-token:${{ secrets.GHUB_TOKEN }}@github.com/${{ github.repository }}
             git push
             if [ -f ads_history.json ]; then
+                git pull origin main --rebase
                 git add ads_history.json
                 git commit -m "Update ads history"
-                git push
+                git push origin main
             else
                 echo "ads_history.json not found!"
             fi
