--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,7 +1,7 @@
 name: Divar Scraper
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/10 * * * *"
   workflow_dispatch:  
 
 jobs:
@@ -42,11 +42,10 @@ jobs:
             git config --global user.name "GitHub Actions"
             git config --global user.email "actions@github.com"
             git remote set-url origin https://x-access-token:${{ secrets.GHUB_TOKEN }}@github.com/${{ github.repository }}
-            git push
             if [ -f ads_history.json ]; then
-                git pull origin main --rebase
                 git add ads_history.json
-                git commit -m "Update ads history"
+                git commit -m "Update ads history" || echo "No changes to commit"
+                git pull origin main --rebase
                 git push origin main
             else
                 echo "ads_history.json not found!"
