--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -39,14 +39,10 @@ jobs:
 
       - name: Commit changes
         run: |
-            git config --global user.name "GitHub Actions"
-            git config --global user.email "actions@github.com"
-            git remote set-url origin https://x-access-token:${{ secrets.GHUB_TOKEN }}@github.com/${{ github.repository }}
-            if [ -f ads_history.json ]; then
-                git add ads_history.json
-                git commit -m "Update ads history" || echo "No changes to commit"
-                git pull origin main --rebase
-                git push origin main
-            else
-                echo "ads_history.json not found!"
-            fi
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git reset --hard HEAD
+          git pull origin main --rebase
+          git add ads_history.json
+          git commit -m "Update ads history"
+          git push origin main
