--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,7 +1,7 @@
 name: Divar Scraper
 on:
   schedule:
-    - cron: "*/10 * * * *"
+    - cron: "0 */1 * * *"
   workflow_dispatch:  
 
 jobs:
@@ -41,8 +41,12 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git reset --hard HEAD
-          git pull origin main --rebase
-          git add ads_history.json
-          git commit -m "Update ads history"
-          git push origin main
+          
+          if git diff --quiet HEAD -- ads_history.json; then
+            echo "No changes to commit."
+          else
+            git add ads_history.json
+            git commit -m "Update ads history"
+            git pull origin main --rebase
+            git push origin main
+          fi
